# serializer version: 1
# name: test_switches[platforms0][switch.air_conditioner_coil_dry_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.air_conditioner_coil_dry_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'coil_dry_mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'coil_dry_mode',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_coil_dry_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_coil_dry_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner coil_dry_mode',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_coil_dry_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_demand_control-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.air_conditioner_demand_control',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'demand_control',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'demand_control',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_demand_control',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_demand_control-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner demand_control',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_demand_control',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_economy-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_economy',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Economy',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Economy',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'economy',
    'unique_id': 'AC000W000000001_economy_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_economy-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner Economy',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_economy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_energy_saving_fan-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_energy_saving_fan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Energy saving fan',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Energy saving fan',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'energy_saving_fan',
    'unique_id': 'AC000W000000001_indoor_fan_control',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_energy_saving_fan-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner Energy saving fan',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_energy_saving_fan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_external_thermostat_off-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.air_conditioner_external_thermostat_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'external_thermostat_off',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'external_thermostat_off',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_external_thermostat_off',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_external_thermostat_off-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner external_thermostat_off',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_external_thermostat_off',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_human_det_auto_off-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.air_conditioner_human_det_auto_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'human_det_auto_off',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'human_det_auto_off',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_human_det_auto_off',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_human_det_auto_off-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner human_det_auto_off',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_human_det_auto_off',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_human_det_auto_on_off-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.air_conditioner_human_det_auto_on_off',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'human_det_auto_on_off',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'human_det_auto_on_off',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_human_det_auto_on_off',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_human_det_auto_on_off-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner human_det_auto_on_off',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_human_det_auto_on_off',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_human_sensor-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_human_sensor',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Human sensor',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Human sensor',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'human_sensor',
    'unique_id': 'AC000W000000001_human_det_auto_save',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_human_sensor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner Human sensor',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_human_sensor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_min_heat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.air_conditioner_min_heat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'min_heat',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'min_heat',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'AC000W000000001_min_heat',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_min_heat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner min_heat',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_min_heat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_outdoor_unit_low_noise-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_outdoor_unit_low_noise',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Outdoor unit low noise',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Outdoor unit low noise',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'outdoor_low_noise',
    'unique_id': 'AC000W000000001_outdoor_low_noise',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_outdoor_unit_low_noise-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner Outdoor unit low noise',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_outdoor_unit_low_noise',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_powerful-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.air_conditioner_powerful',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Powerful',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Powerful',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'powerful',
    'unique_id': 'AC000W000000001_powerful_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_powerful-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner Powerful',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_powerful',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_wi_fi_led-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.air_conditioner_wi_fi_led',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wi-Fi LED',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wi-Fi LED',
    'platform': 'fglair_local',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wifi_led',
    'unique_id': 'AC000W000000001_wifi_led_enable',
    'unit_of_measurement': None,
  })
# ---
# name: test_switches[platforms0][switch.air_conditioner_wi_fi_led-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Air conditioner Wi-Fi LED',
    }),
    'context': <ANY>,
    'entity_id': 'switch.air_conditioner_wi_fi_led',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
